fix: form-control contrast on navbar-dark (fix #1227)

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -13,3 +13,11 @@
     flex: 1;
   }
 }
+
+// Needed to properly style inputs on dark background
+.navbar-dark .form-control {
+  color: $white;
+  &::placeholder {
+    color: $navbar-dark-color;
+  }
+}
